force-app/main/default/objects/CustomerDocumentation__c/fields/IsReferralAsked__c.field-meta.xml
<CustomField>
    <fullName>IsReferralAsked__c</fullName>
    <description>Used to identify if the Customer was asked for referrals during the meeting</description>
    <label>Did you ask for a referral?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>