force-app/main/default/objects/CustomerDocumentation__c/fields/IsThirdPartyReferral__c.field-meta.xml
<CustomField>
    <fullName>IsThirdPartyReferral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the client was referred to a third party</description>
    <label>Did you refer a client to a third party?</label>
    <type>Checkbox</type>
</CustomField>