force-app/main/default/objects/CustomerDocumentation__c/fields/PrimaryAccountId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccountId__c</fullName>
    <label>Client (Primary)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Documentation</relationshipLabel>
    <relationshipName>Customer_Documentation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>